--- a/arte_de_la_pelicula_La_Cabaña.html
+++ b/arte_de_la_pelicula_La_Cabaña.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>DESBLOQUEA TU POTENCIAL EN ESTA TRAVESIA TRANSFORMADORA DE MACK A TRAVÉS DE LA PELICULA LA CABAÑA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Vive la travesia transformadora al interior del ser a través del espejo de Mack, en donde comprenderemos y reconoceremos la virtud del perdón y la liberación">
-    <meta name="keywords" content="Película, perdón, transformación, sufrimiento, paz, alegría, reconocer, Mack, Adonai, espíritu santo, Yo, ser, espiritualidad, película familiar, Papá, creador, verdad, maestra, sabiduría, Fe">
+    <meta name="description" content="Descubre los detalles de la película cristiana basada en el perdón, la paz y la alegría llamada La Cabaña lanzada el 2017, en donde Mackenzie Mack Phillips vive una transformación de vida, reconoce la verdad del sufrimiento humano, aprende a través de la sabiduría, del espíritu santo, Adonai y Jesús que no todo está solo, galardonada con un balón de oro en Dove Award.">
+    <meta name="keywords" content="Película cristiana, La cabaña, perdón, transformación, sufrimiento, paz, alegría, reconoce, Mackenzie Mack Phillips, Adonai, espíritu santo, Jesús, verdad, sabiduría, Fe, William Paul Young">
 
     
 
@@ -211,7 +211,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> theaters </span> ESCENOGRAFIA</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href=""> <p align="justify"> La producción se rodo en el área de Stawamus Chief Park y Chilliwack, Columbia Británica, los 2 set principales la cabaña y la choza, tienen una sensación de verdadera serenidad. <br><br>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> La producción se rodo en el área de Stawamus Chief Park y Chilliwack, Columbia Británica, los 2 set principales la cabaña y la choza, tienen una sensación de verdadera alegria. <br><br>
 								
 								Ese nivel de atención al detalle, es un claro ejemplo de un mundo  protegido por papá, así que tenía que dar la sensación de ser abierto y espacioso, donde se transmitiera una sensación de verdadero cariño.</p></a>
                             <div class="border-top mt-4 pt-4">
@@ -230,7 +230,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                  <small class="m-0"><span class="material-symbols-outlined"> health_and_beauty </span> MAQUILLAJE</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Maquillaje neutro. Su objetivo es realzar o matizar la apariencia natural de un actor o actriz a la hora de representar a un personaje. Tiene muchos truquillos que dependerán de la luz de la escena y los ángulos utilizados. Aquí, también pueden tenerse en cuenta las diversas tendencias de maquillaje, para este tipo de ropdaje se utilizo un maquillajae que realsara la apariencia del actor representativo.</p></a>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Maquillaje neutro. Su objetivo es realzar o matizar la apariencia natural de un actor o actriz a la hora de representar a un personaje. Tiene muchos truquillos que dependerán de la luz de la escena y los ángulos utilizados. Aquí, también pueden tenerse en cuenta las diversas tendencias de maquillaje, para este tipo de rodaje se utilizo un maquillajae que realsara la apariencia del actor representativo.</p></a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
