--- a/contacto_para_recopilar_información.html
+++ b/contacto_para_recopilar_información.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>DESBLOQUEA TU POTENCIAL EN ESTA TRAVESIA TRANSFORMADORA DE MACK A TRAVÉS DE LA PELICULA LA CABAÑA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Vive la travesia transformadora al interior del ser a través del espejo de Mack, en donde comprenderemos y reconoceremos la virtud del perdón y la liberación">
-    <meta name="keywords" content="Película, perdón, transformación, sufrimiento, paz, alegría, reconocer, Mack, Adonai, espíritu santo, Yo, ser, espiritualidad, película familiar, Papá, creador, verdad, maestra, sabiduría, Fe">
+    <meta name="description" content="Descubre los detalles de la película cristiana basada en el perdón, la paz y la alegría llamada La Cabaña lanzada el 2017, en donde Mackenzie Mack Phillips vive una transformación de vida, reconoce la verdad del sufrimiento humano, aprende a través de la sabiduría, del espíritu santo, Adonai y Jesús que no todo está solo, galardonada con un balón de oro en Dove Award.">
+    <meta name="keywords" content="Película cristiana, La cabaña, perdón, transformación, sufrimiento, paz, alegría, reconoce, Mackenzie Mack Phillips, Adonai, espíritu santo, Jesús, verdad, sabiduría, Fe, William Paul Young">
 
     
 
