--- a/contexto_creativo_de_la_pelicula.html
+++ b/contexto_creativo_de_la_pelicula.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
      <title>DESBLOQUEA TU POTENCIAL EN ESTA TRAVESIA TRANSFORMADORA DE MACK A TRAVÉS DE LA PELICULA LA CABAÑA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Vive la travesia transformadora al interior del ser a través del espejo de Mack, en donde comprenderemos y reconoceremos la virtud del perdón y la liberación">
-    <meta name="keywords" content="Película, perdón, transformación, sufrimiento, paz, alegría, reconocer, Mack, Adonai, espíritu santo, Yo, ser, espiritualidad, película familiar, Papá, creador, verdad, maestra, sabiduría, Fe">
+    <meta name="description" content="Descubre los detalles de la película cristiana basada en el perdón, la paz y la alegría llamada La Cabaña lanzada el 2017, en donde Mackenzie Mack Phillips vive una transformación de vida, reconoce la verdad del sufrimiento humano, aprende a través de la sabiduría, del espíritu santo, Adonai y Jesús que no todo está solo, galardonada con un balón de oro en Dove Award.">
+    <meta name="keywords" content="Película cristiana, La cabaña, perdón, transformación, sufrimiento, paz, alegría, reconoce, Mackenzie Mack Phillips, Adonai, espíritu santo, Jesús, verdad, sabiduría, Fe, William Paul Young">
 
     
 
@@ -103,10 +103,10 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contexto</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="contexto_creativo_de_la_pelicula" class="dropdown-item">Escenas</a>
-                                <a href="contexto_creativo_de_la_pelicula" class="dropdown-item">Premios</a>
-                                <a href="contexto_creativo_de_la_pelicula" class="dropdown-item">Secuelas</a>
-                                <a href="contexto_creativo_de_la_pelicula" class="dropdown-item">Creadores</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Escenas</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Premios</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Secuelas</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Creadores</a>
                                 <a href="Bandasonora_sobre_espiritualidad.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
@@ -278,7 +278,7 @@
 <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">NOMBRE PELICULA</h6>
+                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">La Cabaña</h6>
                 <h1>PREMIOS</h1>
             </div>
 			<div class="row"> 
@@ -535,7 +535,7 @@
 	
 	<!-- BANNER BANDA SONORA Start -->
 
-	<div id="bandasonora"> </div>
+	<div id="Bandasonora_sobre_espiritualidad.html"> </div>
     <div class="" style="margin: 90px 0;">
 		 
         <div class="container py-5">
