--- a/productora_de_cine_La_Cabaña.html
+++ b/productora_de_cine_La_Cabaña.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>DESBLOQUEA TU POTENCIAL EN ESTA TRAVESIA TRANSFORMADORA DE MACK A TRAVÉS DE LA PELICULA LA CABAÑA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Vive la travesia transformadora al interior del ser a través del espejo de Mack, en donde comprenderemos y reconoceremos la virtud del perdón y la liberación">
-    <meta name="keywords" content="Película, perdón, transformación, sufrimiento, paz, alegría, reconocer, Mack, Adonai, espíritu santo, Yo, ser, espiritualidad, película familiar, Papá, creador, verdad, maestra, sabiduría, Fe">
+    <meta name="description" content="Descubre los detalles de la película cristiana basada en el perdón, la paz y la alegría llamada La Cabaña lanzada el 2017, en donde Mackenzie Mack Phillips vive una transformación de vida, reconoce la verdad del sufrimiento humano, aprende a través de la sabiduría, del espíritu santo, Adonai y Jesús que no todo está solo, galardonada con un balón de oro en Dove Award.">
+    <meta name="keywords" content="Película cristiana, La cabaña, perdón, transformación, sufrimiento, paz, alegría, reconoce, Mackenzie Mack Phillips, Adonai, espíritu santo, Jesús, verdad, sabiduría, Fe, William Paul Young">
 
     
 
@@ -97,21 +97,21 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="personajes.html" class="nav-item nav-link">Personajes</a>
-                        <a href="arte.html" class="nav-item nav-link">Arte</a>
+                        <a href="personajes_de_la_pelicula_La_cabaña.html" class="nav-item nav-link">Personajes</a>
+                        <a href="arte_de_la_pelicula_La_Cabaña.html" class="nav-item nav-link">Arte</a>
                        
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contexto</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="contexto.html" class="dropdown-item">Escena</a>
-                                <a href="contexto.html" class="dropdown-item">Premios</a>
-                                <a href="contexto.html" class="dropdown-item">Secuelas</a>
-                                <a href="contexto.html" class="dropdown-item">Creadores</a>
-                               <a href="Bandasonora.html" class="dropdown-item">Banda sonora</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Escena</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Premios</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Secuelas</a>
+                                <a href="contexto_creativo_de_la_pelicula.html" class="dropdown-item">Creadores</a>
+                               <a href="Bandasonora_sobre_espiritualidad.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
-						<a href="productora.html" class="nav-item nav-link">Productora</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+						<a href="productora_de_cine_La_Cabaña.html" class="nav-item nav-link">Productora</a>
+                        <a href="contacto_para_recopilar_información.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
